# MLaaS_Experimentation-Retail-Insights-CA-TX-WI

./: Makefile  README.md  github.txt  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
models/forecasting/: prophet_model.pkl
notebooks/forecasting/: Hegde_Roy-24667610-forecasting_ARIMApipeline.ipynb  Hegde_Roy-24667610-forecasting_fbprophetpipeline.ipynb  Hegde_Roy-24667610-forecasting_prophet.ipynb
notebooks/predictive/: Hegde_Roy-24667610-predictive_ridgexgb.ipynb
src/functions/: define_and_split_features_predictive.py  load_data.py  main_predictive.py  preprocess_data.py  train_ridge.py  train_xgboost.py
src/functions/ARIMA/: forecast_arima.py  main_arima.py  train_arima.py
src/functions/Preprocessing/: create_features.py  evaluate_model_predicitve.py  load_data.py
src/functions/prophet/: aggregate_sales_forecasting.py  main_forecasting.py  make_forecast.py  train_prophet.py
